<resources>
    <string name="app_name">Cerana</string>
    <string name="campo_nome">Nome</string>
    <string name="campo_usuario">Usuário</string>
    <string name="campo_senha">Senha</string>
    <string name="campo_confirmar_senha">Confimar senha</string>
    <string name="text_login">Entrar</string>
    <string name="texto_registro">Registrar</string>
    <string name="error_menssagem_nome">Entre com nome completo</string>
    <string name="error_mensagem_usuario">Entre com usuário valido</string>
    <string name="error_menssageg_senha">Entre com a senha </string>
    <string name="sucesso_messagem">Registrado com sucesso</string>
    <string name="texto_no_membro">Criar conta</string>
    <string name="error_usuario_existe">Usuário já registrado.</string>
    <string name="erro_senha_comparar">Senhas não conferem.</string>
    <string name="erro_espaco_branco">Campo vazio</string>
    <string name="erro_caracter_especial">Só pode conter letras e números.</string>
    <string name="erro_tamanho_login">Login inválido, verificar tamanho.</string>
    <string name="erro_tamanho_senha">Senha inválida, verificar tamanho.</string>
    <string name="erro_valido_usuario_senha">Usuário e/ou senha errados.</string>
    <string name="acao_configuracoes">Configurações</string>
    <string name="texto_ola">Ola,</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="btn_logar">Log In</string>
    <string name="error_campo_vazio">Campo Vazio</string>
    <string name="nome_especie">Nome</string>
    <string name="perguntas">Perguntas</string>
    <string name="respostas">Respostas</string>
    <string name="tags">Top tags</string>
    <string name="Descricao">Descrição</string>
    <string name="posts">Posts</string>
    <string name="bio">Escreva sobre você</string>
    <string name="editarPerfil">Editar perfil</string>
</resources>
