<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="0dp"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        tools:context="usuario.gui.CadastroActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="142dp"
            android:src="@mipmap/logo" />

        <EditText
            android:id="@+id/et_register_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="20dp"
            android:hint="@string/campo_nome"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/et_register_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="20dp"
            android:hint="@string/campo_usuario"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark" />


        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="20dp"
            android:hint="@string/campo_senha"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/et_register_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/campo_confirmar_senha"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/btn_register"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/screen_border"
            android:onClick="cadastrar"
            android:text="@string/btn_cadastrar" />

    </LinearLayout>
</ScrollView>