<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="0dp"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:weightSum="1"
        tools:context="usuario.gui.LogInActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="169dp"
            android:src="@mipmap/logo" />


        <EditText
            android:id="@+id/user_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="20dp"
            android:hint="@string/campo_usuario"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:hint="@string/campo_senha"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/btn_login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="55dp"
            android:background="@drawable/screen_border"
            android:onClick="logar"
            android:text="@string/text_login" />

        <Button
            android:id="@+id/btn_register_user"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="131dp"
            android:layout_height="36dp"
            android:layout_marginLeft="115dp"
            android:layout_marginTop="25dp"
            android:background="@android:color/transparent"
            android:onClick="startCadastroActivity"
            android:text="@string/texto_no_membro"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>
</ScrollView>